net-sf-ucanaccess-fork: Configure Sonarcloud and review issues